CMS7-8779: Fix extend element not filling fullscreen when scrollbars are present

--- a/cms/api/src/main/styling/less/_login.less
+++ b/cms/api/src/main/styling/less/_login.less
@@ -27,6 +27,7 @@
 .hippo-login-extend {
   background: @login-extend-bgcolor;
   z-index: 1;
+  position: fixed;
 }
 
 .hippo-login-panel {
